# risa_scraper

./: Cargo.toml
src/: basic_stats.rs  debug.rs  field_table.rs  form_table.rs  horse.rs  horse_entry.rs  horse_info.rs  lib.rs  main.rs  meeting.rs  r1.html  race.rs  race_info.rs  race_start.rs  risa_scraper.rs  title_table.rs
