[package]
name = "risa_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
http = "1.3.1"
regex = "1.11.1"
reqwest = "0.12.15"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors"] }
